--- a/.github/workflows/reusable-github-ci.yml
+++ b/.github/workflows/reusable-github-ci.yml
@@ -40,6 +40,7 @@ jobs:
                                        "Common7\Tools\Microsoft.VisualStudio.DevShell.dll" | gi
 
                $env_variables +=
+                 'CXXFLAGS=/MP',
                  'CONFIG_TYPE=--config ${{ matrix.config }}',
                  'BIN_ARCH=-A x64',
                  'HOST_ARCH=-T host=x64',
@@ -352,9 +353,6 @@ jobs:
               $buildargs += "--mixin", "${{ matrix.config }}"
               $cmakeargs = "--cmake-args", $Env:BIN_ARCH, $Env:HOST_ARCH 
 
-              # allow multiprocess build on windows
-              $Env:CXXFLAGS="/MP"
-
               # multistage build to speed up
               colcon build $buildargs --packages-up-to fastrtps --packages-skip fastrtps `
                            --executor parallel $cmakeargs
@@ -427,5 +425,5 @@ jobs:
            "::set-output name=test_failures::$failed"
 
       - name: Check test failures
-        if: ${{ steps.summary.outcome }} == 'failure'
+        if: ${{ steps.summary.outcome == 'failure' }}
         run: exit ${{ steps.summary.outputs.test_failures }}
